--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  google_fonts: ^1.1.0
+  dotted_border: ^1.0.6
+  flutter_svg: ^0.19.0
+  image_picker_gallery_camera: ^0.1.6
+  
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +50,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/upload.png
+   - assets/images/art.png
+   - assets/images/uploadimage.svg
+   - assets/images/upload1.svg
+   
+ 
+ 
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
