--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 14 16:48:47 EET 2020
-sdk.dir=C\:\\Users\\zeyne\\AppData\\Local\\Android\\Sdk
+#Tue Sep 15 23:41:34 EET 2020
+sdk.dir=D\:\\Android\\Sdk
