--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_svg: ^0.19.0
   image_picker_gallery_camera: ^0.1.6
 
+  image_picker: ^0.6.7+7
+  flutter_datetime_picker: ^1.4.0
+  gender_picker: ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
