--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,8 @@ dependencies:
   http: ^0.12.0
   mobx: ^1.0.0
   flutter_mobx: ^1.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+2
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0
   dotted_border: ^1.0.6
