--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   lottie: ^0.6.0
-
+  provider: ^4.3.2+2
   http: ^0.12.0
   mobx: ^1.0.0
   flutter_mobx: ^1.0.0
