--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   dotted_border: ^1.0.6
   flutter_svg: ^0.19.0
   image_picker_gallery_camera: ^0.1.6
-
+  flutter_signin_button: ^1.1.0
   image_picker: ^0.6.7+7
   flutter_datetime_picker: ^1.4.0
   gender_picker: ^1.0.2
+  firebase_storage: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -60,3 +60,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+
