--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 16 09:32:15 EET 2020
-sdk.dir=C\:\\Users\\zeyne\\AppData\\Local\\Android\\Sdk
+#Wed Sep 16 22:49:13 EET 2020
+sdk.dir=C\:\\Users\\canbe\\AppData\\Local\\Android\\Sdk
