--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,4 +69,5 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
